# AEDA

./: README.md
Projeto_Parte2/: IMOVELÂNDIA.pptx
Projeto_Parte2/Codigo/: Address.cpp  Address.h  CMakeLists.txt  ClientesInactivos.cpp  ClientesInactivos.h  Contrato.cpp  Contrato.h  Contratos.txt  ContratosInactivos.cpp  ContratosInactivos.h  Date.cpp  Date.h  Erro.cpp  Erro.h  FilesInOut.cpp  FilesInOut.h  GerirContratos.cpp  GerirContratos.h  Imoveis.txt  Imovel.cpp  Imovel.h  Menu.cpp  Menu.h  OurCompany.cpp  OurCompany.h  OurCompany.txt  Pessoa.cpp  Pessoa.h  Reserva.cpp  Reserva.h  a_corrigir.txt  bst.h  clients.txt  gerirAddress.cpp  gerirAddress.h  gerirImoveis.cpp  gerirImoveis.h  gerirLeilao.cpp  gerirLeilao.h  gerirRegistrados.cpp  (+13 more)
Testes/2016/CI3/: Res.txt
Testes/2017/: 10.txt  8.txt  9.txt
Testes/2017/CI1/: 10.txt  8.txt  9.txt
Testes/2017/CI2/: 8.txt  9.txt
Testes/2017/Tests/: Car.cpp  Car.h  Garage.h
Testes/2018/: 10.txt  9.txt
Testes/2018/CI1/: 10.txt  9.txt
Testes/2018/CI2/: CSimpleList.h  CStack.h  Kart.cpp  Kart.h  tests.cpp
Testes/2018/Pratica/: Account.cpp  Account.h  Bank.cpp  Bank.h  BankOfficer.cpp  (+1 more)
aula1/: parque.cpp
aula10/: caixa.cpp  maquinaEmpacotar.cpp
aula11/: disjointSets.cpp  maze.cpp  tests.cpp
aula2/: frota.cpp  frota.h  veiculo.cpp  veiculo.h
aula3/: grafo.h
aula6/: balcao.cpp  balcao.h  stackExt.h  tests.cpp
aula7/: dicionario.cpp  dicionario.h  tests.cpp
aula9/: aposta.cpp  aposta.h  jogador.cpp  jogador.h
semana3_adi/: animal.cpp  animal.h  tests.cpp  veterinario.cpp  veterinario.h  zoo.cpp  zoo.h
(+58 files in other folders)
